# vcp-media-server

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.txt  config.toml  make.sh  rustfmt.toml  test_rtmp_pull_push.sh  test_rtsp_pull_push.sh
docs/: README.md  architecture.md  getting-started.md  ring-buffer-dispatcher.md  test-cases.md  troubleshooting.md
example/vcp_media_viewer/: package-lock.json  package.json  vite.config.js
example/vcp_media_viewer/src/: App.css  App.jsx
example/vcp_media_viewer/src-tauri/: Cargo.toml  tauri.conf.json
lib/codec/flv/: Cargo.toml
lib/codec/flv/src/: errors.rs  flv_tag_header.rs  mpeg4_aac.rs  mpeg4_avc.rs  mpeg4_hevc.rs  muxer.rs
lib/codec/flv/src/amf0/: amf0_reader.rs  amf0_writer.rs  errors.rs  mod.rs
lib/codec/h264/: Cargo.toml  h264.dump
lib/codec/h264/examples/decoder/: decode_avcc.rs  dump.rs
lib/codec/h264/src/: errors.rs  lib.rs  sps.rs  utils.rs
lib/codec/h264/src/decoder/: annexb.rs  avcc.rs  mod.rs  rbsp.rs  sps.rs  utils.rs
lib/codec/h264/src/decoder/nal/: mod.rs  pps.rs  sps.rs
lib/codec/h264/src/decoder/nal/sei/: buffering_period.rs  mod.rs  pic_timing.rs  user_data_registered_itu_t_t35.rs
lib/codec/h264/src/decoder/nal/slice/: mod.rs
lib/codec/h264/src/decoder/push/: mod.rs
lib/codec/h264/src/encoder/: encoder.rs  lib_test.rs  nal_unit.rs  sei.rs  test_roundtrip_ffmpeg.rs  test_roundtrip_openh264.rs
lib/codec/h264/src/old/: errors.rs
lib/codec/h265/: Cargo.toml
lib/codec/mpegts/: Cargo.toml
lib/common/: Cargo.toml
lib/common/src/: http.rs  lib.rs  media.rs
lib/common/src/bytesio/: bits_errors.rs  bits_reader.rs  bits_writer.rs  bytes_errors.rs  bytes_reader.rs  bytes_writer.rs  bytesio.rs  bytesio_errors.rs  mod.rs
lib/common/src/http/: errors.rs  mod.rs
lib/common/src/log/: logger.rs
lib/common/src/server/: mod.rs  tcp_server.rs
lib/format/flv/: Cargo.toml
lib/protocol/rtmp/: Cargo.toml
lib/protocol/rtmp/src/: lib.rs
lib/protocol/rtmp/src/chunk/: errors.rs  packetizer.rs  unpacketizer.rs
lib/protocol/rtmp/src/handshake/: digest.rs  errors.rs  handshake_client.rs
lib/protocol/rtmp/src/message/: mod.rs
lib/protocol/rtmp/src/message/chunk/: errors.rs  mod.rs  packetizer.rs  unpacketizer.rs
lib/protocol/rtmp/src/message/handshake/: digest.rs  errors.rs  handshake_client.rs  handshake_server.rs
lib/protocol/rtmp/src/message/messages/: errors.rs  parser.rs
lib/protocol/rtmp/src/message/netconnection/: errors.rs  reader.rs  writer.rs
lib/protocol/rtmp/src/message/netstream/: writer.rs
lib/protocol/rtmp/src/message/netstream/errors/: mod.rs
lib/protocol/rtmp/src/message/protocol_control_messages/: errors.rs  reader.rs  writer.rs
lib/protocol/rtmp/src/message/user_control_messages/: errors.rs  reader.rs  writer.rs
lib/protocol/rtmp/src/messages/: define.rs  errors.rs  parser.rs
lib/protocol/rtmp/src/netconnection/: errors.rs  writer.rs
lib/protocol/rtmp/src/netstream/: errors.rs  writer.rs
lib/protocol/rtmp/src/protocol_control_messages/: errors.rs  reader.rs  writer.rs
lib/protocol/rtmp/src/session/: errors.rs  mod.rs  rtmp_server.rs  rtmp_session.rs  server_session.rs
lib/protocol/rtmp/src/session/cache/: errors.rs  gop.rs  metadata.rs  mod.rs
lib/protocol/rtmp/src/user_control_messages/: errors.rs  reader.rs  writer.rs
lib/protocol/rtmp/src/utils/: errors.rs  mod.rs
lib/protocol/rtp/: Cargo.toml
lib/protocol/rtp/src/: errors.rs  lib.rs  rtp_aac.rs  rtp_h264.rs  rtp_h265.rs  rtp_header.rs  utils.rs
lib/protocol/rtp/src/rtcp/: errors.rs  rtcp_app.rs  rtcp_bye.rs  rtcp_context.rs  rtcp_header.rs  rtcp_rr.rs  rtcp_sr.rs
lib/protocol/rtsp/: Cargo.toml
lib/protocol/rtsp/src/: channel.rs  errors.rs  lib.rs  range.rs  rtsp_channel.rs  rtsp_range.rs  rtsp_track.rs  rtsp_transport.rs  transport.rs
lib/protocol/rtsp/src/message/: channel.rs  errors.rs  mod.rs  range.rs  track.rs  transport.rs
lib/protocol/rtsp/src/session/: errors.rs  mod.rs  server_session.rs
lib/protocol/sdp/: Cargo.toml
lib/protocol/sdp/src/: errors.rs  fmtp.rs  lib.rs  rtpmap.rs  sdp_test.rs
lib/protocol/sdp/src/fmtp/: h264.rs  h265.rs  mod.rs  mpeg4.rs
src/: main.rs  test_logging.rs
src/analysis/: mod.rs
src/common/: auth.rs  define.rs  errors.rs  http.rs  mod.rs  stream.rs
src/core/: broadcast_edge.rs  config.rs  dispatch.rs  frame_ring.rs  live_play.rs  mod.rs  protocol.rs  pusher.rs  stream_hub.rs  stream_manager.rs  tester.rs  timestamp.rs
src/hls/: m3u8.rs  mod.rs  timing.rs  ts_muxer.rs
src/http/: mod.rs
src/http_flv/: mod.rs
src/manager/: api.rs  message.rs  message_hub.rs  mod.rs  service.rs  stream_hub.rs
src/process/: mod.rs
src/process/analysis/: mod.rs
src/process/record/: mod.rs
src/process/snapshot/: mod.rs
src/protocol/: mod.rs
src/protocol/rtp/: errors.rs  mod.rs  rtp_aac.rs  rtp_h264.rs  rtp_h265.rs  rtp_header.rs  utils.rs
src/protocol/rtsp/: mod.rs  rtsp_channel.rs  rtsp_range.rs  rtsp_track.rs  rtsp_transport.rs
src/protocol/sdp/: fmtp.rs  mod.rs  rtpmap.rs
src/record/: mod.rs
src/rtmp/: amf0.rs  chunk.rs  mod.rs  puller.rs  session.rs
src/rtsp/: client_session.rs  common.rs  messages.rs  mod.rs  play_egress.rs  puller.rs  pusher.rs  server_session.rs  session.rs  tests.rs
src/server/: http_server.rs  message_hub.rs  mod.rs  rtmp_server.rs  rtmp_session.rs  rtsp_server.rs  rtsp_session.rs  stream_hub.rs  tcp_server.rs  traits.rs
src/server/hls/: m3u8.rs  mod.rs  timing.rs  ts_muxer.rs
src/server/http/: mod.rs
src/server/http_flv/: mod.rs
src/server/message/: message_hub.rs
src/server/rtmp/: chunk.rs  mod.rs  puller.rs  rtmp_session.rs  session.rs
src/server/rtsp/: common.rs  errors.rs  messages.rs  mod.rs  puller.rs  pusher.rs  server_session.rs
src/server/webrtc/: h264_rtp_ingest.rs  h264_util.rs  (+7 more)
src/snapshot/: mod.rs
src/transmitter/: mod.rs  traits.rs
src/utils/: logger.rs  mod.rs
src/webrtc/: h264_rtp_ingest.rs  h264_util.rs  mod.rs  outbound_h264.rs  peer.rs  play_relay.rs  player.rs  publish_signaling.rs  publisher.rs  rtp_h264.rs  signaling.rs
webrtc/: webrtc-test.html
(+33 files in other folders)
