[workspace] 
members = [ "lib/common", "lib/protocol/rtmp", "lib/protocol/sdp", "lib/protocol/rtp","lib/protocol/rtsp", "lib/codec/h264", "lib/codec/h265", "lib/format/flv", "lib/format/mpegts"]

[workspace.dependencies]


[package]
name = "vcp_media_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vcp_media_common = { path = "./lib/common/" }
vcp_media_rtmp = { path = "./lib/protocol/rtmp/" }
vcp_media_rtsp = { path = "./lib/protocol/rtsp/" }
vcp_media_rtp = { path = "./lib/protocol/rtp/" }
vcp_media_sdp = { path = "./lib/protocol/sdp/" }
# xwebrtc = { path = "../../protocol/webrtc/" }
# httpflv = { path = "../../protocol/httpflv/" }
# hls = { path = "../../protocol/hls/" }


bytes = "1.8.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
byteorder = "1.5.0"
serde_derive = "1.0"
serde = { version = "1.0.101", features = ["std", "derive"] }
tokio = { version = "1.41.0", features = ["full", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-error = "0.2.0"
log = "0.4.22"
tracing-appender = "0.2.3"
chrono = "0.4.38"
rand = "0.8.5"
async-trait = "0.1.83"
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3.31"
lazy_static = "1.5.0"
base64 = "0.22.1"
hex = "0.4.3"
indexmap = "2.6.0"
md5 = "0.7.0"
http = "1.1.0"
axum = "0.7.9"
strum = "0.26.3"
strum_macros = "0.26.4"
ulid = "1.1.3"

#[features]
#serde = ["dep:serde"]
