[workspace] 
members = [ "lib/common", "lib/protocol/rtmp", "lib/protocol/sdp", "lib/protocol/rtp","lib/protocol/rtsp", "lib/codec/h264", "lib/codec/h265", "lib/format/flv", "lib/format/mpegts"]

[workspace.dependencies]


[package]
name = "vcp_media_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vcp_media_common = { path = "./lib/common" }
vcp_media_rtmp = { path = "./lib/protocol/rtmp" }
vcp_media_rtsp = { path = "./lib/protocol/rtsp" }
vcp_media_sdp = { path = "./lib/protocol/sdp" }
# xwebrtc = { path = "../../protocol/webrtc/" }
# httpflv = { path = "../../protocol/httpflv/" }
# hls = { path = "../../protocol/hls/" }


bytes = "1.8.0"
thiserror = "2.0.3"
serde = { version = "1.0.101", features = ["std", "derive"] }
tokio = { version = "1.41.0", features = ["full", "net"] }
log = "0.4.22"
async-trait = "0.1.83"
futures = "0.3.31"
indexmap = "2.6.0"
md5 = "0.7.0"
http = "1.1.0"
axum = "0.7.9"

#[features]
#serde = ["dep:serde"]
