[package]
name = "vcp-media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","time", "local-time", "fmt"] }
tracing-appender = "0.2"
anyhow = "1"
bytes = "1"
futures-util = "0.3"
parking_lot = "0.12"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
async-trait = "0.1"
time = "0.3.49"
webrtc = "0.12"
ice = { package = "webrtc-ice", version = "0.12" }
tokio-tungstenite = "0.24"
