[package]
name = "vcp_media_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
thiserror = "2.0.3"
byteorder = "1.5.0"
serde_derive = "1.0"
serde = { version = "1.0.101", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
log = "0.4.21"
tracing-appender = "0.2.3"
chrono = "0.4.37"
rand = "0.8.5"
async-trait = "0.1.80"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
indexmap = "2.2.6"
