[package]
name = "vcp-media-flv"
description = "flv library."
version = "0.3.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["flv"]
keywords = ["flv", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
failure = "0.1.8"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
indexmap = "2.2.6"

vcp-media-common = { path = "../../common/" }
vcp-media-h264 = { path = "../h264/" }
