[package]
name = "vcp_media_flv"
description = "flv library."
version = "0.3.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia::video"]
keywords = ["flv", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
anyhow = "1.0.91"
thiserror = "2.0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
indexmap = "2.2.6"

vcp_media_common = { path = "../../common/" }
vcp_media_h264 = { path = "../h264/" }
