[package]
name = "vcp-media-h264"
version = "0.1.0"
edition = "2021"
authors = ["HarlanC <wawacry@qq.com>"]
description = "a h264 decoder"
license = "MIT"
repository = "https://github.com/harlanc/xiu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
log = "0.4"
anyhow = "1.0.91"
thiserror = "2.0.3"

vcp-media-common = { path = "../../common/" }