[package]
name = "vcp_media_h264"
version = "0.1.0"
edition = "2021"
authors = ["HarlanC <wawacry@qq.com>"]
description = "a h264 decoder"
license = "MIT"
repository = "https://github.com/harlanc/xiu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
log = "0.4"
thiserror = "2.0.3"
bitstream-io = "2.6"
hex-slice = "0.1.4"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
memchr = { version = "2.7.4"}
rfc6381-codec = "0.2"
vcp_media_common = { path = "../../common" }


[dev-dependencies]
hex-literal = "0.4.1"
#criterion = "0.5"
test-case = "3.0.0"
#iai-callgrind = "0.11.0"

[features]
default = ["std"]
backtrace = []
std = []


[[example]]
name = "decode_avcc"
path = "examples/decoder/decode_avcc.rs"


[[example]]
name = "decode_dump"
path = "examples/decoder/dump.rs"

#[dependencies]
#bitstream-io = "2.2"
#hex-slice = "0.1.4"
#memchr = "2.1.1"

#log = "0.4"
#

#
#[[bench]]
#name = "bench"
#harness = false
#
#[[bench]]
#name = "ci_bench"
#harness = false
#
#
#[profile.bench]
## for profiling,
#debug = true