[package]
name = "vcp_media_rtmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytes = "1.6.0"
thiserror = "2.0.3"
byteorder = "1.5.0"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.21"
chrono = "0.4.37"
rand = "0.8.5"
async-trait = "0.1.80"
hex = "0.4.3"
indexmap = "2.2.6"
hmac = "0.11.0"
sha2 = "0.9"


vcp_media_common = { path = "../../common" }
vcp_media_h264 = { path = "../../codec/h264" }
vcp_media_flv = { path = "../../format/flv" }
