[package]
name = "vcp_media_rtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
thiserror = "2.0.3"
byteorder = "1.5.0"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.21"
async-trait = "0.1.80"

vcp_media_common = { path = "../../common" }