[package]
name = "vcp-media-rtsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
anyhow = "1.0.91"
thiserror = "2.0.3"
byteorder = "1.5.0"
serde_derive = "1.0"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-error = "0.2.0"
log = "0.4.21"
tracing-appender = "0.2.3"
chrono = "0.4.37"
rand = "0.8.5"
async-trait = "0.1.80"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
lazy_static = "1.4.0"
base64 = "0.22.0"
hex = "0.4.3"
indexmap = "2.2.6"
md5 = "0.7.0"
http = "1.1.0"

vcp-media-common = { path = "../../common/" }
vcp-media-rtp = { path = "../rtp/" }
vcp-media-sdp = { path = "../sdp/" }
