[package]
name = "vcp_media_rtsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
thiserror = "2.0.3"
byteorder = "1.5.0"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.21"
chrono = "0.4.37"
rand = "0.8.5"
async-trait = "0.1.80"
futures = "0.3.30"
lazy_static = "1.4.0"
http = "1.1.0"

vcp_media_common = { path = "../../common" }
vcp_media_rtp = { path = "../rtp" }
vcp_media_sdp = { path = "../sdp" }
