[package]
name = "vcp_media_sdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
thiserror = "2.0.3"
log = "0.4.21"
base64 = "0.22.0"
hex = "0.4.3"

vcp_media_common = { path = "../../common" }

